--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,23 @@ version: "3.8"
 
 services:
   localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
     ports:
       - "4566:4566"
       - "8082:8082"     
     environment:
       - AWS_DEFAULT_REGION=us-east-1
-      - HOSTNAME_EXTERNAL=localhost
       - SERVICES=s3:4566
       - DEBUG=1
-      - DATA_DIR=/data
+      - DATA_DIR=/var/lib/localstack
       - PORT_WEB_UI=8082
       - AWS_SECRET_ACCESS_KEY=HHHHHHHHHHHHHHHHHHHHH
       - AWS_SECRET_KEY_ID=AAAAAAAAAAAAAAAAAAAA
-    volumes:
+    # volumes:
       # - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       # - "/var/run/docker.sock:/var/run/docker.sock"
-      - ./localstack/:/docker-entrypoint-initaws.d/
+      # - ./data:/tmp/localstack/data
+    volumes:
+      # - ./data:/tmp/localstack/data
+      - ./stubs/s3:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
