--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -43,5 +43,10 @@
     "name": "application.bucket.name",
     "type": "java.lang.String",
     "description": "A description for 'application.bucket.name'"
+  },
+  {
+    "name": "cloud.aws.endpoint.local-url",
+    "type": "java.lang.String",
+    "description": "A description for 'cloud.aws.endpoint.local-url'"
   }
 ]}
